--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Attendance and safe days calculator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/parthshahk/Attendance-Scheduler/issues"
   },
-  "homepage": "https://github.com/parthshahk/Attendance-Scheduler#readme"
+  "homepage": "https://github.com/parthshahk/Attendance-Scheduler#readme",
+  "devDependencies": {
+    "nodemon": "^1.18.10"
+  }
 }
