--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/parthshahk/Attendance-Scheduler#readme",
   "devDependencies": {
     "nodemon": "^1.18.10"
+  },
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
+    "uuid": "^3.3.2"
   }
 }
